03/05/2024
thermo.py:
-- Changed HVAC system pin designations to rpin (receive from external thermostat pin) and tpin (transmit to relay coil pin)
-- HVAC system for loop cleanups (var 'hvs' created)
-- HVAC system pin GPIO setup is now done in a for loop rather than individually
-- Removed all MakerHawk UPS+ related code
-- Added daviswx.readWxHL() to wxloop()
>>> Timer to read HiLows data is set to one hour
daviswx.py:
-- Added readWxHL() based on Wospi hiLows() code
gv.py:
-- Added wxMinMax global variable
pitemp.php:
-- Added ability to show all recorded HVAC system change events using do=viewSysHistory;showall=1 (admin only)
-- Added HiLows to Index
-- UPS code disabled for now via hardcoded variable...

03/03/2024
pitemp.php:
-- Added temperature reads to comments in MySQL saves of HVAC system changes
-- Lowered wind chill display threshold from 3 to 1 degree

02/24/2024
thermo.py:
-- Revert back to TMP36 sensors for HVAC system checks if the weather center's ISS is not responding
daviswx.py:
-- set wxData['ISSerror'] if temperature reads too high (over 212, weather center responds showing temp as 3276.7*F and humidity as 0%)
pitemp.php:
-- Show error if weather center ISS is not responding

02/18/2024
thermo.py:
-- Combined all no-response website sends into one function
-- Weather center data check will now stop running if the check fails 10 times
>>> Can be re-awoken by sending WebVar 'wx' = 1 which will reset the failure counter upon a successful run
-- Various changes and fixes
gv.py:
-- Changes to console output colors
pitemp:
-- Added wx to WebVars (for re-enabling weather center if it fails too many times)

02/17/2024
daviswx.py:
-- Code cleanup (removed unused variables, changed all variables to lowercase, some condensing)
thermo.py, pitemp.php:
-- wxData variables changed to match daviswx.py loop

02/16/2024
gv.py:
-- Created to save "global" variables for use across modules
thermo.py:
-- Integrated loop code from daviswx.py